welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:7: error: Missing closing brace `}' assumed here
}
^ColumnByColumn:11: error: expected class or object definition
def deplace(){
^ColumnByColumn:27: error: expected start of definition
override def run() {
         ^